Closed
Bug 1600565
Opened 6 years ago
Closed 6 years ago
FORGET_SKIPPABLE_FREQUENCY telemetry increase in Firefox Nightly builds from 2019-11-27
Categories
(Core :: DOM: Core & HTML, defect, P1)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | --- | fixed |
firefox73 | --- | fixed |
People
(Reporter: jonco, Assigned: jonco)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
As detected by Cerberus, there was an increase in FORGET_SKIPPABLE_FREQUENCY after bug 1599445 landed:
Updated•6 years ago
|
Keywords: regression
Assignee | ||
Comment 1•6 years ago
|
||
One thing I inadvertantly changed was that didDoWork gets set to true even if we don't call FireForgetSkippable and execute what was the third branch of the if statement:
Assignee | ||
Comment 2•6 years ago
|
||
I'll leave this open until we can verify that the telemetry has returned to previous levels.
Keywords: leave-open
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ed525dce968
Fix changes to CCRunnerFired made during previous refactoring r=mccr8
![]() |
||
Comment 4•6 years ago
|
||
bugherder |
Assignee | ||
Comment 5•6 years ago
|
||
Closing as the telemetry looks like it's returned to previous levels:
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Keywords: leave-open
Comment 6•6 years ago
|
||
Does this need a Beta uplift request?
status-firefox71:
--- → unaffected
status-firefox72:
--- → affected
status-firefox73:
--- → fixed
status-firefox-esr68:
--- → unaffected
Flags: needinfo?(jcoppeard)
Assignee | ||
Comment 7•6 years ago
|
||
Comment on attachment 9113863 [details]
Bug 1600565 - Fix changes to CCRunnerFired made during previous refactoring r?mccr8
Beta/Release Uplift Approval Request
- User impact if declined: Could affect performance by needlessly running ForgetSkippable too often
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a tricky part of the code. But this fix has been on central for 6 days and telemetry indicates that it has fixed the problem. So I'd say it's better to take the fix than leave the regression in 72.
- String changes made/needed:
Flags: needinfo?(jcoppeard)
Attachment #9113863 -
Flags: approval-mozilla-beta?
Updated•6 years ago
|
Target Milestone: --- → mozilla73
Comment 8•6 years ago
|
||
Comment on attachment 9113863 [details]
Bug 1600565 - Fix changes to CCRunnerFired made during previous refactoring r?mccr8
regression fix for 72.0b8
Attachment #9113863 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
![]() |
||
Comment 9•6 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•