Bug 1600565 - Fix changes to CCRunnerFired made during previous refactoring r=mccr8

One thing I inadvertantly changed was that didDoWork gets set to true even if we don't call FireForgetSkippable and execute what was the third branch of the if statement:

https://searchfox.org/mozilla-central/rev/883d58bccf1a36465ef5ee14b62db0a9925ab85b/dom/base/nsJSEnvironment.cpp#1878-1883

Differential Revision: https://phabricator.services.mozilla.com/D56021